# mujoco-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yaml
mujoco/: Cargo.toml
mujoco-app/: Cargo.toml
mujoco-app/examples/: visualise_xml.rs
mujoco-app/src/: lib.rs  mujoco_app.rs
mujoco-sys/: Cargo.toml
mujoco-sys/scripts/: generator.rs
mujoco-sys/tests/: simple_env.rs
mujoco-visualiser/: Cargo.toml
mujoco-visualiser/examples/: visualise_xml.rs
mujoco-visualiser/src/: lib.rs
mujoco/src/: vfs.rs
